src/tests/workspace/snapshots/texlab__tests__workspace__symbol__filter_bibtex.snap
---
source: src/tests/workspace/symbol.rs
expression: result.actual_symbols
---
[
  {
    "deprecated": false,
    "kind": 24,
    "location": {
      "uri": "[tmp]/main.bib",
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 14
        }
      }
    },
    "name": "foo"
  },
  {
    "deprecated": false,
    "kind": 15,
    "location": {
      "uri": "[tmp]/main.bib",
      "range": {
        "start": {
          "line": 2,
          "character": 0
        },
        "end": {
          "line": 2,
          "character": 20
        }
      }
    },
    "name": "bar"
  }
]
