src/tests/workspace/snapshots/texlab__tests__workspace__symbol__filter_type_figure.snap
---
source: src/tests/workspace/symbol.rs
expression: result.actual_symbols
---
[
  {
    "deprecated": false,
    "kind": 6,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 15,
          "character": 0
        },
        "end": {
          "line": 19,
          "character": 12
        }
      }
    },
    "name": "Figure 1: Bar"
  }
]
